# SKARF-Routing-Algorithm

./: CMakeLists.txt  LICENSE  README.md  extract.sh  osm2po.config
include/: cxxopts.h  experiments.h  graph.h  id_queue.h  point.h  quad_node.h  scc.h  segment_tree.h  skarf.h  util.h
notebooks/: overlap_new.ipynb  skarf_comparison_v3.ipynb
src/: experiments.cpp  graph.cpp  main.cpp  quad_node.cpp  scc.cpp  skarf.cpp  util.cpp
